--- a/TheFellowship_URP/Packages/manifest.json
+++ b/TheFellowship_URP/Packages/manifest.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "com.unity.ide.visualstudio": "2.0.11",
+    "com.unity.render-pipelines.universal": "10.5.1",
     "com.unity.test-framework": "1.1.27",
     "com.unity.textmeshpro": "3.0.6",
     "com.unity.timeline": "1.4.8",
