--- a/TheFellowship_URP/Packages/manifest.json
+++ b/TheFellowship_URP/Packages/manifest.json
@@ -1,6 +1,8 @@
 {
   "dependencies": {
+    "com.unity.2d.sprite": "1.0.0",
     "com.unity.ide.visualstudio": "2.0.11",
+    "com.unity.inputsystem": "1.0.2",
     "com.unity.render-pipelines.universal": "10.5.1",
     "com.unity.test-framework": "1.1.27",
     "com.unity.textmeshpro": "3.0.6",
